// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle rendering Circle with changing state rendering successfull 1`] = `
<div
  className="undefined "
>
  <div
    className="text text_type_input text_color_input mb-4 undefined undefined undefined"
  />
  <div
    className="undefined   undefined"
  >
    <p
      className="text text_type_circle text_color_input undefined"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 undefined undefined"
  />
  <div
    className="text text_type_input text_color_input mt-4 undefined undefined undefined"
  />
</div>
`;

exports[`Circle rendering Circle with default state rendering successfull 1`] = `
<div
  className="undefined "
>
  <div
    className="text text_type_input text_color_input mb-4 undefined undefined undefined"
  />
  <div
    className="undefined   undefined"
  >
    <p
      className="text text_type_circle text_color_input undefined"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 undefined undefined"
  />
  <div
    className="text text_type_input text_color_input mt-4 undefined undefined undefined"
  />
</div>
`;

exports[`Circle rendering Circle with head-reactElement rendering successfull 1`] = `
<div
  className="undefined "
>
  <div
    className="text text_type_input text_color_input mb-4 undefined undefined undefined"
  >
    <div
      className="undefined "
    >
      <div
        className="text text_type_input text_color_input mb-4 undefined undefined undefined"
      />
      <div
        className="undefined   undefined"
      >
        <p
          className="text text_type_circle text_color_input undefined"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 undefined undefined"
      />
      <div
        className="text text_type_input text_color_input mt-4 undefined undefined undefined"
      />
    </div>
  </div>
  <div
    className="undefined   undefined"
  >
    <p
      className="text text_type_circle text_color_input undefined"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 undefined undefined"
  />
  <div
    className="text text_type_input text_color_input mt-4 undefined undefined undefined"
  />
</div>
`;

exports[`Circle rendering Circle with head-string rendering successfull 1`] = `
<div
  className="undefined "
>
  <div
    className="text text_type_input text_color_input mb-4 undefined undefined undefined"
  >
    head
  </div>
  <div
    className="undefined   undefined"
  >
    <p
      className="text text_type_circle text_color_input undefined"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 undefined undefined"
  />
  <div
    className="text text_type_input text_color_input mt-4 undefined undefined undefined"
  />
</div>
`;

exports[`Circle rendering Circle with index rendering successfull 1`] = `
<div
  className="undefined "
>
  <div
    className="text text_type_input text_color_input mb-4 undefined undefined undefined"
  />
  <div
    className="undefined   undefined"
  >
    <p
      className="text text_type_circle text_color_input undefined"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 undefined undefined"
  >
    0
  </p>
  <div
    className="text text_type_input text_color_input mt-4 undefined undefined undefined"
  />
</div>
`;

exports[`Circle rendering Circle with isSmall prop === true rendering successfull 1`] = `
<div
  className="undefined "
>
  <div
    className="text text_type_input text_color_input mb-4 undefined undefined undefined"
  />
  <div
    className="undefined  undefined undefined"
  >
    <p
      className="text text_type_circle text_color_input undefined"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 undefined undefined"
  />
  <div
    className="text text_type_input text_color_input mt-4 undefined undefined undefined"
  />
</div>
`;

exports[`Circle rendering Circle with letter rendering successfull 1`] = `
<div
  className="undefined "
>
  <div
    className="text text_type_input text_color_input mb-4 undefined undefined undefined"
  />
  <div
    className="undefined   undefined"
  >
    <p
      className="text text_type_circle text_color_input undefined"
    >
      A
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 undefined undefined"
  />
  <div
    className="text text_type_input text_color_input mt-4 undefined undefined undefined"
  />
</div>
`;

exports[`Circle rendering Circle with modified state rendering successfull 1`] = `
<div
  className="undefined "
>
  <div
    className="text text_type_input text_color_input mb-4 undefined undefined undefined"
  />
  <div
    className="undefined   undefined"
  >
    <p
      className="text text_type_circle text_color_input undefined"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 undefined undefined"
  />
  <div
    className="text text_type_input text_color_input mt-4 undefined undefined undefined"
  />
</div>
`;

exports[`Circle rendering Circle with tail-reactElement rendering successfull 1`] = `
<div
  className="undefined "
>
  <div
    className="text text_type_input text_color_input mb-4 undefined undefined undefined"
  />
  <div
    className="undefined   undefined"
  >
    <p
      className="text text_type_circle text_color_input undefined"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 undefined undefined"
  />
  <div
    className="text text_type_input text_color_input mt-4 undefined undefined undefined"
  >
    <div
      className="undefined "
    >
      <div
        className="text text_type_input text_color_input mb-4 undefined undefined undefined"
      />
      <div
        className="undefined   undefined"
      >
        <p
          className="text text_type_circle text_color_input undefined"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 undefined undefined"
      />
      <div
        className="text text_type_input text_color_input mt-4 undefined undefined undefined"
      />
    </div>
  </div>
</div>
`;

exports[`Circle rendering Circle with tail-string rendering successfull 1`] = `
<div
  className="undefined "
>
  <div
    className="text text_type_input text_color_input mb-4 undefined undefined undefined"
  />
  <div
    className="undefined   undefined"
  >
    <p
      className="text text_type_circle text_color_input undefined"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 undefined undefined"
  />
  <div
    className="text text_type_input text_color_input mt-4 undefined undefined undefined"
  >
    head
  </div>
</div>
`;

exports[`Circle rendering Circle without letter rendering successfull 1`] = `
<div
  className="undefined "
>
  <div
    className="text text_type_input text_color_input mb-4 undefined undefined undefined"
  />
  <div
    className="undefined   undefined"
  >
    <p
      className="text text_type_circle text_color_input undefined"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 undefined undefined"
  />
  <div
    className="text text_type_input text_color_input mt-4 undefined undefined undefined"
  />
</div>
`;
